@startuml TaskFusion-CLI 
skinparam linetype ortho

top to bottom direction

package "Facade-layer" {
    class "TaskFusion" as taskFusion {

    }

}

package "Presentation-layer" {
    class TaskFusionCLI {
        - scanner : Scanner
        --
        # getInstance() : TaskFusionCLI
        + mainLoop() : void
    }

    interface ControllerInterface {
        --
        showMenu() : void
    }

    class ____MenuController {
        --
    }


    interface ViewInterface {
        --
        show() : void
    }

    class ____View {
        --
    }

    class ____Component

    TaskFusionCLI -->"1" ____MenuController

    ____MenuController --|> ControllerInterface
    ____View --|> ViewInterface
    ____MenuController -->"0..*" ____View
    ____View -->"0..1"  ____MenuController
    ____View -->"0..*" ____Component
}


TaskFusionCLI -u->"1" taskFusion : taskFusion

@enduml